# myscript

./: .bash_history  .git-credentials  .gitconfig  .gitignore  .rvm  .viminfo  0001-add-sql-for-merge-build-status.patch  com.dabsquared.gitlabjenkins.GitLabPushTrigger.xml  com.dabsquared.gitlabjenkins.connection.GitLabConnectionConfig.xml  config.xml  credentials-configuration.xml  credentials.xml  hudson.plugins.emailext.ExtendedEmailPublisher.xml  hudson.plugins.logparser.LogParserPublisher.xml  identity.key.enc  installedPlugins.xml  jenkins-jira-plugin.xml  jenkins.install.InstallUtil.installingPlugins  jenkins.install.InstallUtil.lastExecVersion  jenkins.metrics.api.MetricsAccessKey.xml  jenkins.plugins.git.GitHooksConfiguration.xml  jenkins.plugins.publish_over_ssh.BapSshPublisherPlugin.xml  jenkins.telemetry.Correlator.xml  jenkins_dashboard.mv.db  jenkins_dashboard.trace.db  jp.ikedam.jenkins.plugins.extensible_choice_parameter.ExtensibleChoiceParameterDefinition.xml  jp.ikedam.jenkins.plugins.extensible_choice_parameter.GlobalTextareaChoiceListProvider.xml  log  org.jenkinsci.plugins.resourcedisposer.AsyncResourceDisposer.xml  org.thoughtslive.jenkins.plugins.jira.JiraStepsConfig.xml  queue.xml  queue.xml.bak  rules  s  scriptApproval.xml  secret.key  svn-commit.tmp
.ssh/: id_rsa  id_rsa.pub  known_hosts
android/: local.properties
builder/: Gemfile  README.md  nohup.out  output.27363  package.json
docker/: Dockerfile  Dockerfile1  Dockerfile2  sources.list
jenkins/: 1  2  groovy_script  jenkinsd  pipline-docker.txt  template.xml  template_android.xml  template_git.xml  template_ios.xml  template_web.xml
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/: CMakeLists.txt
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/data/: save_dataset.h
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/evaluate/: CMakeLists.txt  main.cpp
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/map/: weight_escalator_map.cpp
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/module/: image_type.h  model.h  ssd.cpp
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/module/npu_aml/: model_npu.h
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/module/npu_aml/vnn/: vnn_yolov3_tiny.h
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/module/npu_rk/: model_npu_rk.h
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/mot/: Hungarian.cpp
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/test/: CMakeLists.txt  test_instance.cpp
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/test/validate/: validate_map.cpp  validate_map.h
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676022189784/pt/PSL/src/utils/: data_type.cpp  file.cpp  log.h  slam.h
jobs/rubby-deeplearning-3566/workspace_ws-cleanup_1676023576766/pt/PSL/src/sample/camera/: CMakeLists.txt  capture_image.cpp
jobs/rubby-embeded-3566/workspace_ws-cleanup_1676425601429/rubby_sensor_rk3566/mind_os/tutorial/runlib/: CMakeLists.txt
jobs/rubby-embeded-3566/workspace_ws-cleanup_1676425601429/rubby_sensor_rk3566/mind_os/tutorial/runlib/src/: ExampleDetach1.cpp
jobs/rubby-embeded-3566/workspace_ws-cleanup_1676459719235/rubby_sensor_rk3566/mind_os/tutorial/robot_simulator/src/nodes/system/: CMakeLists.txt
jobs/rubby-embeded-3566/workspace_ws-cleanup_1676872965335/rubby_sensor_rk3566/mind_os/tutorial/robot_simulator/src/nodes/slam/: CMakeLists.txt
jobs/rubby-embeded-3566/workspace_ws-cleanup_1677046846376/rubby_sensor_rk3566/mind_os/tutorial/pub_sub/src/nodes/publisher/: CMakeLists.txt
jobs/rubby-embeded-3566/workspace_ws-cleanup_1677046846376/rubby_sensor_rk3566/mind_os/tutorial/robot_simulator/src/nodes/hmi/: CMakeLists.txt
jobs/rubby-embeded-3566/workspace_ws-cleanup_1677046846376/rubby_sensor_rk3566/mind_os/tutorial/ros/src/nodes/subscriber/: CMakeLists.txt
jobs/rubby-embeded-3566/workspace_ws-cleanup_1677065610555/rubby_sensor_rk3566/mind_os/tutorial/robot_simulator/: CMakeLists.txt
jobs/rubby-embeded-3566/workspace_ws-cleanup_1677065610555/rubby_sensor_rk3566/mind_os/tutorial/robot_simulator/msgs/msg/: OccupancyGrid.h
jobs/rubby-embeded-3566/workspace_ws-cleanup_1677065610555/rubby_sensor_rk3566/mind_os/tutorial/robot_simulator/msgs/srv/: GetPoseSrv.h  GetPoseSrv2.h
jobs/rubby-embeded-3566/workspace_ws-cleanup_1677065610555/rubby_sensor_rk3566/mind_os/tutorial/robot_simulator/src/nodes/sensor/: SensorSimulator.cpp
jobs/rubby-embeded-3566/workspace_ws-cleanup_1677122963507/rubby_sensor_rk3566/mind_os/tutorial/robot_simulator/src/nodes/nav/: CMakeLists.txt
org/: #分支新建规范.html#  .#分支新建规范.html  SCM日常操作指南.html  SCM日常操作指南.org  Tag创建指南.html  Tag创建指南.org  bookmarks.html  c.pptx  daily.txt  indemind-guide.html  indemind-guide.org  slam_compile.html  slam_compile.org  svn-guide.html  svn-guide.org  test.html  test.org  分支合并主干指南.html  分支合并主干指南.org  分支新建规范.html  分支新建规范.org  线下分支合并主干指南.html  线下分支合并主干指南.org  线下分支合并主干指南.tex  预合并冲突解决指南.html  预合并冲突解决指南.org
plugins/: build-with-parameters.jpi  commons-lang3-api.jpi.tmp  config-file-provider.jpi.tmp  extended-choice-parameter.jpi  gitlab-plugin.jpi.tmp  javax-mail-api.jpi.tmp  jersey2-api.jpi.tmp  jira.jpi  jira.jpi.tmp  jobConfigHistory.jpi  localization-zh-cn.jpi.tmp  metrics.jpi  sonar.jpi.tmp
product-config/: dafy_dfs_project  dafy_static_project  svnadmin.tar
py/: avgv.py  bd.py  code.py  dingding.py  execl.py  exit.py  huahua.py  jenkin.py  jenkins.py  jr.py  login.py  m.py  mysqlconn.py  parse_station.py  ping.py  s.py  scheduler.py  smtp.py  stack_demo.py  stations.py  subprocess.py  subps.py  task.py  test.py  test.py~  thread.py  tickets.py  url.py
secrets/: hudson.console.AnnotatedLargeText.consoleAnnotator  hudson.console.ConsoleNote.MAC  hudson.model.Job.serverCookie  hudson.util.Secret  jenkins.model.Jenkins.crumbSalt  jenkins.slaves.JnlpSlaveAgentProtocol.secret  master.key  (+4 more)
(+172377 files in other folders)
